--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,5 +1,5 @@
 html {
-  font-size: 14px;
+  /* font-size: 14px; */
 }
 
 @media (min-width: 768px) {
@@ -14,9 +14,9 @@ html {
 
 html {
   position: relative;
-  min-height: 100%;
+  /* min-height: 100%; */
 }
 
 body {
-  margin-bottom: 60px;
+  /* margin-bottom: 60px; */
 }
